[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Pedro F. Costa <pedro.filipe@talkdesk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aocd = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
