[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Pedro F. Costa <pedro.filipe@talkdesk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^2.0.1"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
